[package]
name = "rudp-socket-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rudp_protocol_kit = { path = "../rudp-protocol-kit" }
storage_kit = { path = "../storage-kit" }
